# wi-bot

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Readme.md  deploy.json
arduino/: firmware.ino
arduino/firmware/: firmware.ino
cmake/Platform/: Arduino.cmake
desktop/: CommandBuilder.cpp  CommandBuilder.hpp  RoboClient.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  roboclient.cpp  roboclient.h
openwrt/: server.c
openwrt/mjpgstreamer/plugins/output_rawtcp/: Makefile  output_rawtcp.c
src/api/: commands.h
src/arduino/: CMakeLists.txt  common.h  firmware.ino  promini_pins.h
src/arduino/BatteryLevel/: BatteryLevel.ino
src/arduino/platform/: boards.txt  platform.txt
src/arduino/platform/bootloaders/optiboot/: optiboot_atmega328.hex
src/cmd-server/: CMakeLists.txt  server.c
src/mjpgstreamer/: CMakeLists.txt
src/mjpgstreamer-plugins/output_rawtcp/: CMakeLists.txt  output_rawtcp.c
src/mjpgstreamer/plugins/output_rawtcp/: output_rawtcp.c
src/wibot-console/: BotDiscovery.cpp  BotDiscovery.hpp  CMakeLists.txt  CameraController.cpp  CameraController.hpp  CameraItem.cpp  CameraItem.hpp  CommunicationController.cpp  CommunicationController.hpp  MotorController.cpp  MotorController.hpp  RoboClient.pro  StreamClient.cpp  StreamClient.hpp  config.json  main.cpp  main.qml
src/wibot-service-tool/: CMakeLists.txt  CSerialCommunication.cpp  CSerialCommunication.h  CSerialPortListModel.cpp  CSerialPortListModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
test/: QmlRawCameraGrab.pro  RawCameraNode.cpp  RawCameraNode.hpp  RoboClient.cpp  RoboClient.hpp  StreamClient.cpp  StreamClient.hpp  main.cpp  main.qml
